--- a/home.css
+++ b/home.css
@@ -1,75 +1,101 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
-
 }
-.body{
+
+.body {
     width: 100%;
 }
-.container{
+
+.container {
     width: 100%;
     font-family: Arial, sans-serif;
-    border: 1px solid black;
-    background-color: rgb(235, 230, 230);
-
-   
+    background-color: rgb(221, 218, 218);
 }
 
 header {
     height: 100px;
     background-color: #333;
     display: flex;
-    column-gap: 60px;
     align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
 }
-
-
-    
 
 nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: center;
+    align-items: center;
 }
 
 nav ul li {
     margin: 0 15px;
+    position: relative;
 }
 
 nav ul li a {
     color: white;
     text-decoration: none;
     font-size: 22px;
-    transition: 0.40s all;
-
+    transition: 0.4s all;
 }
-nav ul li a:hover{
-    color:black;
+
+nav ul li a:hover {
+    color: black;
     background-color: white;
     padding: 10px;
     border-radius: 10px;
 }
-button{
-    margin-left: 90px;
-    background-color:  #55b7ca;
-    padding: 10px 18px;
-    border: none;
-    border-radius: 10px;
 
-}
-button a{
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-    
-}
-button:hover{
-    color: white;
+nav ul li .sub-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
     background-color: gray;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    padding: 10px;
+    width: 180px;
+    text-align: left;
+}
+
+nav ul li:hover .sub-menu {
+    display: block;
+}
+
+.sub-menu li {
+    margin: 20px 0;
+}
+
+.sub-menu li a {
+    color: black;
+    font-size: 18px;
+    transition: color 0.3s ease-in-out;
+    text-align: center;
+}
+
+.sub-menu li a:hover {
+    color: white;
+    background-color: black;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+#btn{
+    text-decoration: none;
+    color: rgb(247, 243, 243);
+    background-color: rgb(55, 156, 224);
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+#btn:hover{
+    background-color: gray;
+    color: white;
+
 }
 
 .brief{
@@ -83,12 +109,15 @@ button:hover{
     align-content: center;
 }
 .brief button{
-background-color: white;
-font-size: 20px;
+background-color: rgb(44, 103, 190);
+font-size: 18px;
 font-weight: 600;
+padding: 10px 20px;
+border-radius: 10px;
+border: none;
 }
 .brief button:hover{
-    background-color: rgb(0, 102, 255);
+    background-color: rgb(50, 54, 59);
     color: white;
 }
 .brief input{
@@ -103,6 +132,7 @@ font-weight: 600;
     width: 100%;
     margin-top: 50px;
     padding-top: 30px;
+    padding-bottom: 50px;
     border-bottom: 0.5px gray solid;
 
 }
@@ -115,7 +145,18 @@ font-weight: 600;
     border-bottom: 0.5px gray solid;
 
 }
-
+ #link{
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    background-color: rgb(71, 173, 233);
+    color: white;
+    margin-left: 550px;
+    margin-bottom: 50px;
+}
+#link:hover{
+    background-color: gray;
+}
 .ground p{
     font-size:25px;
     margin-left: 20px;
@@ -353,6 +394,10 @@ footer {
     
     
 }
+.footer-section ul li a:hover {
+    color: red;
+}
+
 
 .footer-section p {
     margin-top: 20px;
