--- a/news.css
+++ b/news.css
@@ -32,7 +32,7 @@ nav ul {
 }
 
 nav ul li {
-    margin: 0 15px;
+    margin: 0 20px;
     position: relative;
 }
 
@@ -98,149 +98,67 @@ nav ul li:hover .sub-menu {
 
 }
 .news{
-    height: 1180px;
-    width: 100%;
-    margin-top: 50px;
-
-}
-.news1{
-    height: 860px;
-    width: 100%;
-    display: flex;
-    column-gap: 20px;
-    justify-content: center;
-    margin-top: 20px;
-    padding-top: 30px;
-
-
-
-}
-.news1A,.news2{
-    height: 800px;
-    width: 45%;
-    border: 0.5px solid rgb(185, 183, 183);
-    background-color: rgb(212, 212, 203);
-
-
-}
-.news2A{
-    height: 400px;
-    width: 100%;
-    border-bottom: 0.5px solid rgb(185, 183, 183);
-
-
-
-}
-.news1 h3,h6,p{
-    margin: 10px;
-}
-.news2 p{
-    font-size: 14px;
-}
-.news2 img{
-    margin-left: 100px;
-    border-radius: 10px;
-}
-.news button{
-    text-decoration: none;
-    background-color: rgb(82, 176, 230);
-    border: 0px;
-    padding: 10px 20px;
-    border-radius: 10px;
-    margin-left: 550px;
-}
-.news button:hover{
-    color: white;
-    background-color: gray;
-}
-.articles{
     height: 150px;
     width: 100%;
-    margin-top: 50px;
-    text-align: center;
-
-}
-.articles1{
-    height: 330px;
-    width: 100%;
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-}
-.articles1A{
-    height:330px;
-    width: 30%;
-    text-align: center;
-    border:0.5px black solid;
-    border-radius: 10px;
-    background-color: rgb(231, 219, 219);
-
-
-
-
-}
-.articles1B{
-    height: 330px;
-    width: 60%;
     align-content: center;
-    border:0.5px black solid;
-    border-radius: 10px;
-    background-color: rgb(231, 219, 219);
-
-
-
-}
-.articles1A img{
-    height: 250px;
-    width: 330px;
-    margin-top: 10px;
-    border-radius: 40px;
-}
-
-.openion{
-    height: 180px;
-    width: 100%;
+    text-align: center;
+    color: rgb(44, 43, 43);
     margin-top: 50px;
-    border-top: 0.5px black solid;
-    padding-top: 40px;
+}
+
+.trending{
+    height: 1100px;
+    width: 100%;
     
-}
-.openionA{
-    height: 900px;
-    width: 100%;
+
+    padding-top: 20px;
     display: flex;
+    flex-wrap: wrap;
+    column-gap: 10px;
+    justify-content: center;
+    color: black;
 }
-.openionB{
-    height: 900px;
-    width: 100%;
+.trending1{
+    height: 600px;
+    width: 790px;
+    padding-top: 20px;
+    border: 1px gray solid;
 }
-.openion1{
-    height: 200px;
-    width:100%;
-    border: 0.5px rgb(10, 141, 141) solid;
+.trending h5{
+    padding-left: 10px;
+    margin-top: 10px;
 }
-.openion1 h1{
-    padding: 10px;
-    font-size: 25px;
-    color: #858282;
-}
-.reviews{
-    height: 300px;
-    width: 100%;
-}
-.reviews a{
-    text-decoration: none;
-    color: white;
-    background-color: rgb(52, 132, 206);
-    padding: 10px 20px;
-    border-radius: 10px;
-    margin-left: 500px;
-}
-.reviews a:hover{
-    background-color: gray;
-}
+.trending a{
+    color: black;
+    font-weight: 600;
+    padding-left: 10px;
 
+}
+.trending2{
+    height: 600px;
+    width: 490px;
+    border: gray 0.5px solid;
 
+    padding-top: 20px;
+
+}.trending3, .trending4, .trending5{
+    height: 450px;
+    width: 420px;
+    border: gray 0.5px solid;
+
+    padding-top: 20px;
+    }
+    #one {
+        color: white;
+        text-decoration: none;
+        border: 1px solid;
+        padding: 5px 10px;
+        background-color: black;
+     }
+
+     .zoom-image:hover{
+        transform: scale(1.1);
+    }
 
 
 
@@ -285,11 +203,12 @@ footer {
 .footer-section ul li a {
     color: white;
     text-decoration: none;
-    }
-
-    .footer-section ul li a:hover {
-        color: red;
-    }
+    
+    
+}
+.footer-section ul li a:hover {
+    color: red;
+}
 
 
 .footer-section p {
