--- a/home.css
+++ b/home.css
@@ -21,7 +21,21 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
+top: 0;
+animation: fadeInDown 1s ease-in-out;
 }
+
+@keyframes fadeInDown {
+from {
+    opacity: 0;
+    transform: translateY(-20px);
+}
+to {
+    opacity: 1;
+    transform: translateY(0);
+}
+}
+
 
 nav ul {
     list-style-type: none;
@@ -32,7 +46,7 @@ nav ul {
 }
 
 nav ul li {
-    margin: 0 15px;
+    margin: 0 20px;
     position: relative;
 }
 
@@ -68,7 +82,7 @@ nav ul li:hover .sub-menu {
 }
 
 .sub-menu li {
-    margin: 20px 0;
+    margin: 18px 0;
 }
 
 .sub-menu li a {
@@ -94,6 +108,19 @@ nav ul li:hover .sub-menu {
 }
 #btn:hover{
     background-color: gray;
+    color: white;
+
+}
+#logout{
+    margin-left: 80px;
+    text-decoration: none;
+    color: rgb(247, 243, 243);
+    background-color: rgb(255, 17, 9);
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+#logout:hover{
+    background-color: rgb(9, 136, 240);
     color: white;
 
 }
@@ -179,6 +206,18 @@ margin: 40px 500px;
 .ground img:hover{
     transform: scale(1.07);
 }
+
+.brief h1, .brief p{
+    transform: translateX(-100%);
+    animation:slideIn 2s forwards;
+}
+@keyframes slideIn{
+    to{
+        transform: translateX(0);
+    }
+}
+
+
 
 .product{
     height: 750px;
