--- a/technews.css
+++ b/technews.css
@@ -21,8 +21,20 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
+top: 0;
+animation: fadeInDown 1s ease-in-out;
 }
 
+@keyframes fadeInDown {
+from {
+    opacity: 0;
+    transform: translateY(-20px);
+}
+to {
+    opacity: 1;
+    transform: translateY(0);
+}
+}
 nav ul {
     list-style-type: none;
     margin: 0;
@@ -97,6 +109,19 @@ nav ul li:hover .sub-menu {
     color: white;
 
 }
+#logout{
+    margin-left: 80px;
+    text-decoration: none;
+    color: rgb(247, 243, 243);
+    background-color: rgb(255, 17, 9);
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+#logout:hover{
+    background-color: rgb(9, 136, 240);
+    color: white;
+
+}
 .news{
     height: 1180px;
     width: 100%;
@@ -126,7 +151,8 @@ nav ul li:hover .sub-menu {
 .news2A{
     height: 400px;
     width: 100%;
-    border-bottom: 0.5px solid rgb(185, 183, 183);
+    border: 0.5px solid rgb(185, 183, 183);
+
 
 
 
